--- a/testApp.html
+++ b/testApp.html
@@ -28,7 +28,7 @@
         <h2>
                 เพศ : {{gender}}
                 <br>
-                เลือกเพศ : 
+                เลือกเพ : 
                 <input type="radio"  value="ชาย" v-model="gender"> <label>ชาย</label>
                 <input type="radio"  value="หญิง" v-model="gender"> <label>หญิง</label>
                 <input type="radio" value="ไม่ระบุ" v-model="gender"> <label>ไม่ระบุ</label>
